--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,15 @@
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
-  font-family: Quicksand,sans-serif;
+  font-family: Quicksand, sans-serif;
 }
 
-.navbar { 
+.navbar {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
-   
 }
 
 .nav-container {
@@ -25,21 +24,27 @@
 
 .nav-container img {
   width: 350px;
-  height: 250px; 
+  height: 250px;
   padding: 2rem;
 }
 
-.nav-container  h1, p{ 
-  text-transform: uppercase; 
-  padding-top: 1rem; 
-  color: rgba(226, 124, 6, 0.692) ;
+.nav-container h1,
+p {
+  text-transform: uppercase;
+  padding-top: 1rem;
+  color: rgba(226, 124, 6, 0.692);
   text-shadow: 2px 4px #dbd2d2;
 }
 
+.nav-container p {
+  color: #e2a452;
+  text-shadow: none;
+}
 
-.nav-container  p{
-   color: #e2a452; 
-   text-shadow: none;
+.formSearch {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .search {
@@ -51,14 +56,14 @@
   font-size: 18px;
   margin-right: -2rem;
   padding: 0.95rem 1rem;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   width: 36.5em;
-   box-shadow: 2px 8px 12px 0 rgba(226, 124, 6, 0.692);
+  box-shadow: 2px 8px 12px 0 rgba(226, 124, 6, 0.692);
 }
 
-.search:focus { 
-  box-shadow: 2px 8px 12px 0 rgba(226, 124, 6, 0.692); 
-  border-bottom:1px solid rgba(19, 137, 141, 0.692);
+.search:focus {
+  box-shadow: 2px 8px 12px 0 rgba(226, 124, 6, 0.692);
+  border-bottom: 1px solid rgba(19, 137, 141, 0.692);
   outline: none;
 }
 
@@ -67,11 +72,39 @@
   border: none;
   outline: none;
   font-size: 18px;
-  color:rgba(226, 124, 6, 0.692);
-  padding-right: 30px; 
+  color: rgba(226, 124, 6, 0.692);
+  padding-right: 30px;
 }
 
-.container{
+.corner .image {
+  width: 100px;
+  height: 100px;
+  margin-top: 5%;
+  margin-left: 5%;
+  border-radius: 50%;
+  background: white;
+  box-shadow: 1px 2px 3px 0 rgba(19, 137, 141, 0.692);
+}
+
+.corner .image img {
+  width: inherit;
+  height: inherit;
+  border-radius: 50%;
+}
+
+.corner-content {
+  align-self: flex-end;
+  width: 60%;
+  text-shadow: none;
+}
+
+.corner-content p {
+  text-shadow: none;
+  color: rgba(226, 124, 6, 0.692);
+  font-size: 20px;
+}
+
+.container {
   grid-gap: 40px;
   display: grid;
   gap: 40px;
@@ -83,16 +116,16 @@
   border-radius: 25px;
   box-shadow: 2px 8px 12px 0 rgba(19, 137, 141, 0.692);
   height: 195px;
-  padding: 1.7rem 1.5rem;  
+  padding: 1.7rem 1.5rem;
 }
 
-.card .card-info{
+.card .card-info {
   align-items: center;
   display: flex;
   gap: 40px;
-  justify-content: center; 
+  justify-content: center;
 }
- 
+
 .card .card-info .image {
   width: 100px;
   height: 100px;
@@ -101,14 +134,13 @@
   box-shadow: 1px 2px 3px 0 rgba(19, 137, 141, 0.692);
 }
 
-.card .card-info .image img{
+.card .card-info .image img {
   width: inherit;
   height: inherit;
   border-radius: 50%;
-  
 }
 
-.card .card-info .content p{
+.card .card-info .content p {
   display: flex;
   flex-direction: column;
   font-size: 20px;
@@ -117,16 +149,15 @@
   text-shadow: none;
 }
 
-.buttton { 
+.buttton {
   width: 45%;
-  margin: 35px 0 0 80px; 
-  
+  margin: 35px 0 0 80px;
 }
 
 .buttton button {
   background: linear-gradient(-225deg, #f79256 9%, #3076cc 20%, #67d3b2 60%, #36d8a7 100%);
   width: 100%;
-  display: flex; 
+  display: flex;
   padding: 0.9rem 1.3rem;
   border: none;
   font-size: 18px;
@@ -136,26 +167,111 @@
 }
 
 .buttton button:hover {
-  background:  #36d8a7ce ;
-  
+  background: #36d8a7ce;
 }
+
 .buttton button span {
-  color:  rgba(238, 40, 5, 0.87);
+  color: rgba(238, 40, 5, 0.87);
   width: 100%;
   display: flex;
   font-size: 20px;
   font-weight: bolder;
-  
-}
-.details-container {
-  background: #3076cc;
 }
 
-.details-info{
-  background: #36d8a7;
-  grid-gap: 40px;
+.details-container {
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.details-info {
+  background: transparent;
+  grid-gap: 10px;
   display: grid;
-  gap: 40px;
-  grid-template-columns: 1fr 1fr ;
-  padding: 35px 11% 100px;
+  width: 60%;
+  margin-top: 14%;
+  grid-template-columns: 1fr 1fr;
+  padding: 65px 1%;
+}
+
+.details-info p.title,
+p.content {
+  text-transform: capitalize;
+  font-size: 25px;
+  font-weight: 500;
+  color: rgba(226, 124, 6, 0.692);
+  text-shadow: none;
+}
+
+.details-info p.content {
+  text-align: end;
+}
+
+.top {
+  width: 98%;
+  background: transparent;
+  display: flex;
+  justify-content: space-between;
+  padding: 0% 2%;
+  margin-top: 2%;
+}
+
+.top .icon {
+  font-size: 38px;
+  font-weight: 700;
+  color: rgb(238, 118, 5);
+  margin: 70% 5%;
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+.corner {
+  background: transparent;
+  box-shadow: 2px 8px 12px 0 rgba(226, 124, 6, 0.692);
+  border-bottom: 1px solid rgba(19, 137, 141, 0.692);
+  display: flex;
+  border-radius: 25px;
+  justify-content: space-between;
+  width: 32%;
+  padding: 2%;
+}
+
+.categoryButton {
+  display: grid;
+  margin-top: -5%;
+  width: 200px;
+  margin-left: 5%;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding: 10px 35px;
+  grid-gap: 5px;
+}
+
+.categoryButton .ca-buttton {
+  background: white;
+  box-shadow: 2px 8px 12px 0 rgba(226, 124, 6, 0.692);
+  border-bottom: 1px solid rgba(19, 137, 141, 0.692);
+  width: 100%;
+  padding: 0.9rem 1.3rem;
+  border: none;
+  font-size: 18px;
+  font-weight: 700;
+  border-radius: 25px;
+  color: rgba(226, 124, 6, 0.692);
+}
+
+.ca-buttton:hover {
+  box-shadow: 2px 8px 12px 0 rgba(19, 137, 141, 0.692);
+}
+
+@media (max-width: 640px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    gap: 0;
+    padding: 35px 1% 10px;
+  }
 }
